@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-10T16:27:49Z",
-  "count_outdated" : 194,
-  "uniques_outdated" : 136,
+  "timestamp" : "2023-07-14T08:24:15Z",
+  "count_outdated" : 195,
+  "uniques_outdated" : 137,
   "count" : 202,
   "uniques" : 142,
   "clones" : [
-    {
-      "timestamp": "2023-06-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-02T00:00:00Z",
       "count": 4,
